Fix missing spacing before button on Special:CreateAccount
When extensions add fields with help messages to the signup form,
e.g. on https://wikitech.wikimedia.org/wiki/Special:CreateAccount,
there was no margin between the help message and the next field.

Remove a workaround for this problem from the password help message.
Follow-up to 1d82384bb5c9cdfaece0dd7c2a85ee25d295d514.

--- a/resources/src/mediawiki.ui/components/forms.less
+++ b/resources/src/mediawiki.ui/components/forms.less
@@ -121,7 +121,8 @@
 //
 // (We use a broad definition of 'field' here: a purely textual information
 // block is also a "field".)
-.mw-ui-vform-field {
+.mw-ui-vform-field,
+.mw-ui-vform .htmlform-tip {
 	display: block;
 	margin: 0 0 15px;
 	padding: 0;
